--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "nodemon": "^3.1.7"
   },
   "scripts": {
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "build": "nodemon src/server.js"
   },
   "author": "",
   "license": "ISC",
