--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "express",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "devDependencies": {
     "nodemon": "^3.1.7"
   },
   "scripts": {
-    "dev": "nodemon src/server.js",
-    "build": "nodemon src/server.js"
+    "dev": "nodemon src/index.js"
   },
   "author": "",
   "license": "ISC",
