--- a/vercel.json
+++ b/vercel.json
@@ -2,19 +2,14 @@
     "version": 2,
     "builds": [
         {
-          "src": "index.js",
-          "use": "@vercel/node",
-          "config": {
-            "outputs": {
-              "main": ".output/index.js"
-            }
-          }
+          "src": "src/server.js",
+          "use": "@vercel/node"
         }
       ],
       "routes": [
         {
           "src": "/(.*)",
-          "dest": "index.js"
+          "dest": "src/server.js"
         }
       ]
 }
